Update link for 'Alimentação' to point to alimentacao.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="nav">
         <a href="#">Início</a>
         <a href="#">O Método</a>
-        <a href="#">Alimentação</a>
+        <a href="alimentacao.html">Alimentação</a>
         <a href="#">Exercícios</a>
         <a href="#">Hábitos</a>
       </nav>
