Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="container">
       <h1 class="logo">Bela Dieta</h1>
       <nav class="nav">
-        <a href="#">Início</a>
-        <a href="#">O Método</a>
-        <a href="alimentacao.html">Alimentação</a>
-        <a href="#">Exercícios</a>
-        <a href="#">Hábitos</a>
+  <a href="index.html">Início</a>
+  <a href="metodo.html">O Método</a>
+  <a href="alimentacao.html">Alimentação</a>
+  <a href="exercicios.html">Exercícios</a>
+  <a href="habitos.html">Hábitos</a>
+      </nav>
       </nav>
     </div>
   </header>
