Add cache-busting query parameter to stylesheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Bela Dieta | Muito mais que uma dieta, um estilo de vida</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bela Dieta é um programa de reeducação alimentar focado em equilíbrio, constância e mudança de hábitos saudáveis.">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
 
