--- a/index.html
+++ b/index.html
@@ -9,75 +9,58 @@
 </head>
 <body>
 
-  <header class="header">
-    <div class="container">
-      <h1 class="logo">Bela Dieta</h1>
-      <nav class="nav">
-  <a href="index.html">Início</a>
-  <a href="metodo.html">O Método</a>
-  <a href="alimentacao.html">Alimentação</a>
-  <a href="exercicios.html">Exercícios</a>
-  <a href="habitos.html">Hábitos</a>
-      </nav>
-    </div>
-  </header>
+<header class="header">
+  <div class="container">
+    <h1 class="logo">Bela Dieta</h1>
 
-  <section class="hero">
-    <div class="container">
-      <h2>Muito mais que uma dieta,<br>um estilo de vida</h2>
-      <p>
-        O Bela Dieta é um método de reeducação alimentar que ajuda você a emagrecer
-        com equilíbrio, constância e sem dietas extremas.
-      </p>
-      <a href="#" class="btn">Conheça o Método</a>
-    </div>
-  </section>
+    <nav class="nav">
+      <a href="index.html">Início</a>
+      <a href="metodo.html">O Método</a>
+      <a href="alimentacao.html">Alimentação</a>
+      <a href="exercicios.html">Exercícios</a>
+      <a href="habitos.html">Hábitos</a>
+    </nav>
+  </div>
+</header>
 
-  <section class="about">
-    <div class="container">
-      <h3>O que é o Bela Dieta?</h3>
-      <p>
-        O Bela Dieta foi criado para pessoas que desejam emagrecer de forma saudável,
-        sustentável e sem sofrimento. Aqui, o foco não está em restrições,
-        mas na construção de hábitos que transformam sua rotina e sua relação com a comida.
-      </p>
-    </div>
-  </section>
+<section class="hero">
+  <div class="container">
+    <h2>Muito mais que uma dieta,<br>um estilo de vida</h2>
+    <p>
+      O Bela Dieta é um método de reeducação alimentar focado em equilíbrio,
+      constância e mudança de hábitos saudáveis.
+    </p>
 
-  <section class="benefits">
-    <div class="container">
-      <h3>Por que escolher o Bela Dieta?</h3>
-      <div class="cards">
-        <div class="card">✔️ Sem dietas extremas</div>
-        <div class="card">✔️ Alimentação equilibrada</div>
-        <div class="card">✔️ Exercícios acessíveis</div>
-        <div class="card">✔️ Mudança de hábitos</div>
-        <div class="card">✔️ Resultados sustentáveis</div>
+    <a href="#" class="btn">Comece agora</a>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h3>Como funciona o método</h3>
+
+    <div class="cards">
+      <div class="card">
+        <h4>Lose It!</h4>
+        <p>Fase inicial para criar hábitos saudáveis e iniciar a perda de peso.</p>
+      </div>
+
+      <div class="card">
+        <h4>Live It!</h4>
+        <p>Fase contínua para manter resultados e viver com equilíbrio.</p>
+      </div>
+
+      <div class="card">
+        <h4>Estilo de vida</h4>
+        <p>Alimentação consciente, movimento diário e saúde duradoura.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="method">
-    <div class="container">
-      <h3>O Método</h3>
-      <p>
-        O método Bela Dieta é dividido em fases que ajudam você a iniciar o processo
-        de emagrecimento e, principalmente, manter os resultados a longo prazo.
-      </p>
-      <a href="#" class="btn-secondary">Ver as Fases</a>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="container">
-      <p>
-        ⚠️ Este site tem caráter informativo e educativo.
-        As informações aqui contidas não substituem a orientação de um nutricionista
-        ou profissional de educação física.
-      </p>
-      <span>© 2026 Bela Dieta</span>
-    </div>
-  </footer>
+<footer>
+  <p>© 2026 Bela Dieta. Todos os direitos reservados.</p>
+</footer>
 
 </body>
 </html>
